--- a/tabs/ionic.project
+++ b/tabs/ionic.project
@@ -1,4 +1,11 @@
 {
   "name": "tabs",
-  "app_id": ""
+  "app_id": "",
+  "browsers": [
+    {
+      "platform": "android",
+      "browser": "crosswalk",
+      "version": "12.41.296.5"
+    }
+  ]
 }
